# mba-research

./: README.md  main.py  pyproject.toml  strategies.py
code/: fn.py  logger.py  main.py  strategies.py
code/data/: comparativo.ods
data/: etfsListados.csv  fundosListados.csv
guidelines/: Template Resultados Preliminares_PT.docx  Template Resultados Preliminares_PT.txt
notes/: research_project_01.md  research_project_template.md  resultados_preliminares.md
projeto_pesquisa/: .~lock.[Projeto de pesquisa] - Silvano Antonio Alves Pereira Junior.docx#  [Projeto de pesquisa] - Silvano Antonio Alves Pereira Junior.docx
