[project]
name = "mba-research"
version = "0.1.0"
description = ""
authors = [
    {name = "0b10n3",email = "silvasmath@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "yfinance (>=0.2.61,<0.3.0)",
    "scipy (>=1.15.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
